components/nginx-gateway-fabric/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
    annotations:
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        cert-manager.io/cluster-issuer: letsencrypt-prod
    name: shared
    namespace: nginx-gateway-fabric
spec:
    gatewayClassName: nginx
    listeners:
        - name: http
          port: 80
          protocol: HTTP
          allowedRoutes:
              namespaces:
                  from: "All"
        - name: https
          hostname: "*.systekeks.no"
          port: 443
          protocol: HTTPS
          allowedRoutes:
              namespaces:
                  from: "All"
          tls:
            mode: Terminate
            certificateRefs:
             - kind: Secret
               name: systekeks-secret
